# cpp-sc2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
OLD/docs/: tutorial2.md  tutorial3.md
OLD/examples/: CMakeLists.txt
OLD/examples/sc2renderer/: CMakeLists.txt
OLD/examples/tutorial/: tutorial2.cpp
OLD/include/sc2api/: sc2_args.h  sc2_connection.h  sc2_control_interfaces.h  sc2_data.h  sc2_game_settings.h  sc2_unit_filters.h
OLD/include/sc2api/typeids/: sc2_4.10.0_typeenums.h  sc2_4.10.4_typeenums.h  sc2_5.0.10_typeenums.h  sc2_5.0.12_typeenums.h  sc2_5.0.14_typeenums.h  sc2_5.0.5_typeenums.h
OLD/include/sc2utils/: ProcessManager.h  sc2_utils.h
OLD/src/: CMakeLists.txt
OLD/src/sc2api/: CMakeLists.txt  sc2_args.cc  sc2_client.cc  sc2_coordinator.cc  sc2_replay_observer.cc  sc2_score.cc
OLD/src/sc2api/typeids/: sc2_5.0.14_typeenums.cpp
OLD/src/sc2utils/: CMakeLists.txt  ProcessManager.cpp  ProcessManagerPosix.cpp  ProcessManagerWindows.cpp  arg_parser.cpp  platform.cpp  sc2_utils.cpp
OLD/tests/: CMakeLists.txt  all_tests.cc  feature_layers_shared.h  test_ability_remap.cc  test_actions.cc  test_movement_combat.cc  test_multiplayer.cc  test_restart.cc  test_snapshots.cc  test_unit_command_common.cc
OLD/tests/sc2utils/: test_arg_parser.cpp
cmake/: astraConfig.cmake.in
examples/: CMakeLists.txt  annoying_helper.cc  bot_micro.cc  bot_mp.cc  bot_simple.cc  feature_layers.cc  proxy.cc  rendered.cc  replay.cc  save_load.cc
examples/common/: bot_examples.cc
examples/old/: annoying_helper.cc  echo_actions.cc  intermediate_bot.cc  proxy.cc
examples/other/: replay_observer.cpp
examples/sc2renderer/: sc2_renderer.cc  sc2_renderer.h
examples/tutorial/: tutorial1.cpp  tutorial2.cpp  tutorial3.cpp
extras/: CMakeLists.txt
extras/starcraft2/: CMakeLists.txt  README.md
extras/starcraft2/include/: starcraft2.h
extras/starcraft2/include/sc2/: sc2_game.h  sc2_game_state.h
extras/starcraft2/include/sc2/actions/: chat_actions.h  debug_actions.h  observer_actions.h  raw_actions.h  spatial_actions.h  ui_actions.h
extras/starcraft2/include/sc2/api/: common.h  conversions.h  sc2_api.h
extras/starcraft2/include/sc2/api/request/: setup_requests.h
extras/starcraft2/include/sc2/api/response/: debug_responses.h  error_responses.h  game_responses.h  other_responses.h  setup_responses.h
extras/starcraft2/src/sc2/: sc2_game.cpp
extras/starcraft2/src/sc2/api/: sc2_api.cpp
extras/starcraft2/src/sc2/conversions/: action_conversions.h  common_conversions.h  debug_conversions.h  enums.h  game_conversions.h  other_conversions.h  request_builders.h  setup_conversions.h
include/: astra.h
include/astra/: action.h  agent.h  coordinator.h  game.h  game_state.h  process.h  websocket.h
include/sc2api/: sc2_action.h  sc2_api.h  sc2_common.h  sc2_connection.h  sc2_coordinator.h  sc2_game_settings.h  sc2_map_info.h  sc2_score.h  sc2_server.h  sc2_unit.h  sc2_unit_filters.h
include/sc2utils/: Process.h  arg_parser.h  logger.h  platform.h  process.h  sc2_lib.h  sc2_utils.h
src/: CMakeLists.txt  temp.cpp
src/astra/: process.cpp  websocket.cpp
src/sc2api/: CMakeLists.txt  sc2_agent.cc  sc2_args.cc  sc2_client.cc  sc2_common.cc  sc2_connection.cc  sc2_coordinator.cc  sc2_data.cc  sc2_game_settings.cc  sc2_map_info.cpp  sc2_proto_to_pods.cc  sc2_server.cc  sc2_unit.cc
src/sc2api/typeids/: sc2_5.0.14_typeenums.cpp
src/sc2lib/: CMakeLists.txt
src/sc2protocol/: CMakeLists.txt
src/sc2renderer/: CMakeLists.txt
src/sc2utils/: CMakeLists.txt  arg_parser.cpp  platform.cpp  process.cpp  process_posix.cpp  process_windows.cpp  sc2_scan_directory.cc  sc2_search.cc  sc2_utils.cc
tests/: CMakeLists.txt  all_tests.cc  feature_layers_shared.cc  test_ability_remap.cc  test_feature_layer.cc  test_feature_layer_mp.cc  test_framework.cc  test_movement_combat.cc  test_multiplayer.cc  test_observation_interface.cc  test_restart.cc  test_unit_command.cc  test_unit_command_common.cc
